weeks/week-01-k8s-api-and-control-plane/04-admission-webhooks-and-policy/lab/validating-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: require-owner-label
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE","UPDATE"]
      resources:   ["deployments"]
  validations:
  - expression: "has(object.metadata.labels) && has(object.metadata.labels.owner)"
    message: "deployment must have metadata.labels.owner"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-owner-label-binding
spec:
  policyName: require-owner-label
  validationActions: [Deny]
